# CapstoneL17

./: .gitignore  README.md  measurements_transcription.csv  pyproject.toml
Demixing BS-RoF/: requirements.txt
Demixing BS-RoF/bs_roformer/: __init__.py  bs_roformer.py  download.py  inference.py  model_registry.py  utils.py
Demixing BS-RoF/bs_roformer/configs/: config_bs_roformer_sw.yaml
Demixing BS-RoF/bs_roformer/data/: bs_models.json  overrides.json
Demixing BS-RoF/bs_roformer/models/roformer-model-bs-roformer-sw-by-jarredou/: BS-Rofo-SW-Fixed.ckpt
src/scripts/: run_decode.py  run_demix.py  run_encode_foa.py  run_encode_hoa.py
src/spatial_pipeline/: audio_io.py  config.py  conventions.py  demix.py  foa.py  pipeline.py  speaker_layout.py
src/spatial_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/spatial_pipeline/ambisonics/: __init__.py
src/spatial_pipeline/ambisonics/core/: __init__.py  spherical_harmonics.py
src/spatial_pipeline/ambisonics/decoding/: decode_to_speakers.py
src/spatial_pipeline/ambisonics/encoding/: __init__.py  foa.py  hoa.py
src/spatial_pipeline/ambisonics/layout/: __init__.py  speaker_layout.py
src/tests/: test_foa.py
tests/: test_directions.py  test_foa_compatibility.py  test_hoa_order1_equivalence.py  test_speaker_layout.py
